[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[files]
packages =
    pyjac
    pyjac.core
    pyjac.functional_tester
    pyjac.performance_tester
    pyjac.pywrap
    pyjac.libgen
    pyjac.tests

extra_files =
    setup.py
    README.md
    LICENSE
    CITATION.md
    citation.jsonld

[metadata]
license_file = LICENSE

[aliases]
test=pytest

[tool:pytest]
addopts = -vv
